--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -6,17 +6,17 @@
         <div class="card" style="border-radius: 1rem;">
           <div class="row g-0">
             <div class="col-md-6 col-lg-5 d-none d-md-block  ">
-              <img src="https://wallpaperaccess.com/full/4893666.jpg"
+              <img src="https://i.pinimg.com/originals/94/09/7e/94097e458fbb22184941be57aaab2c8f.png"
                 alt="login form" class="img-fluid bg-dark" style="border-radius: 1rem 0 0 1rem; height: 580px; " />
             </div>
             <div class="col-md-6 col-lg-7 d-flex align-items-center">
               <div class="card-body p-4 p-lg-5 text-black">
 
-                <form method="post" action="/userlogin" id="form"  class="form-group"> 
+                <form method="post" action="/admin/adminlogin" id="form"  class="form-group"> 
 
                  
 
-                  <h5 class="fw-normal mb-3 pb-3 text-dark font-weight-bold" style="letter-spacing: 1px;">Login</h5>
+                  <h5 class="fw-normal mb-3 pb-3 text-dark font-weight-bold" style="letter-spacing: 1px;">Admin Login</h5>
 
                   <div class="form-outline mb-4">
                      <label class="form-label" for="form2Example17">Email </label>
@@ -44,9 +44,9 @@
                     <button class="btn btn-dark btn-lg btn-block" type="submit">Login</button>
                   </div><hr>
 
-                  <!-- <a class="small text-muted" href="#!">Forgot password?</a> -->
-                  <small class="mb-5 pb-lg-2 " style="color: #393f81;">Don't have an account? <a href="/signup"
-                      style="color: #03109b;"><small class="text-danger font-weight-bold">Register here</small></a></small>
+                  <a class="small text-muted" href="#!">Forgot password?</a>
+                  <!-- <small class="mb-5 pb-lg-2 " style="color: #393f81;">Don't have an account? <a href="/signup"
+                      style="color: #03109b;"><small class="text-danger font-weight-bold">Register here</small></a></small> -->
                       <div>
                         <a href="#!" class="small text-muted">Terms of use.</a>
                   <a href="#!" class="small text-muted">Privacy policy</a>
