--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -3,10 +3,26 @@
     <nav class="navbar navbar-light bg-dark justify-content-between">
         <a class="navbar-brand text-white">Home</a>
         <form class="form-inline">
-            <a href="/logout"><input type="button" class="btn btn-danger" value="log out"></a>
+            <a href="/logoutt"><input type="button" class="btn btn-danger" value="log out"></a>
         </form>
       </nav>
 
 </header>
+<section>
+    <div class="container">
+        <div class="d-flex justify-content-center mt-5">
+            <div class="card text-center m-5 ">
+                <img src="" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h3 class="card-title">Welcome <span style="color: rgb(156, 22, 133);"></span>  </h3>
+                  <h6 class="card-text">This your home page</h6>
+                  
+                </div>
+              </div>
+    </div>
+
+    </div>
+   
+</section>
 
 <%- include('../partials/footer')%>
