--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -20,7 +20,7 @@
 
                   <div class="form-outline mb-4">
                      <label class="form-label" for="form2Example17">Email </label>
-                    <input type="email" id="Email" name="email" class="form-control form-control-lg" required  >
+                    <input type="email" id="email1" name="email" class="form-control form-control-lg" required  >
                     <!-- <span id="usernameError" class="text-danger" ></span> -->
                    
                     
@@ -28,7 +28,7 @@
 
                   <div class="form-outline mb-4">
                         <label class="form-label" for="form2Example27">Password</label >
-                    <input type="password" id="Password" name="password" class="form-control form-control-lg" required  />
+                    <input type="password" id="password" name="password" class="form-control form-control-lg" required  />
                 
                   </div>
                   <div class="mt-2">
@@ -63,6 +63,30 @@
     </div>
   </div>
 </section>
+<script>
+  
+  document.getElementById("email1").addEventListener("input",function(){
+   
+    var email=document.getElementById("email1").value.trim()
+    console.log(email);
+    if(email==""){
+      document.getElementById("email1").setCustomValidity("Email cannot be null")
+    }else{
+      document.getElementById("email1").setCustomValidity("")
+    }
+  })
+  document.getElementById("password").addEventListener("input",function(){
+    var password=document.getElementById("password").value.trim()
+    console.log();
+    if(password.length<4){
+      document.getElementById("password").setCustomValidity("Password less than 4")
+    }else{
+      document.getElementById("password").setCustomValidity("")
+
+    }
+  })
+
+</script>
     
  <%- include('../partials/footer.ejs') %>     
    
