--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -7,7 +7,7 @@
           <div class="row g-0">
             <div class="col-md-6 col-lg-5 d-none d-md-block  ">
               <img src="https://wallpaperaccess.com/full/4893666.jpg"
-                alt="login form" class="img-fluid bg-dark" style="border-radius: 1rem 0 0 1rem; height: 580px; " />
+                alt="login form" class="img-fluid bg-dark" style="border-radius: 1rem 0 0 1rem; height: 580px;object-fit: cover; " />
             </div>
             <div class="col-md-6 col-lg-7 d-flex align-items-center">
               <div class="card-body p-4 p-lg-5 text-black">
